[package]
name = "deepboy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = { version = "0.23.0", default-features = true }
gperftools = "0.2.0"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 2
